<resources>
    <string name="app_name">قرار</string>
    <string name="createButton">ساخت قرار</string>
    <string name="checkButton">مرور قرار های ثبت شده</string>
    <string name="editButton">ویرایش قرار های پیشین</string>
    <string name="tutorialButton">نحوه استفاده از برنامه</string>
    <string name="aboutButton">درباره ما</string>
    <string name="checkByNameButton">جستجو با نام افراد</string>
    <string name="checkByIDButton">جستجو با آیدی قرار</string>
    <string name="checkByTimeButton">جستجو بر اساس تاریخ</string>
    <string name="search">جستجو</string>
    <string name="emptySearchText">لطفا فیلد جستجو را پر کنید.</string>
    <string name="aboutUsTextTitle">درباره ما</string>
    <string name="aboutUsText">این گروه 3 نفره متشکل از 3 دانشجوی  دانشگاه شریف جمع شده اند تا این پروژه را به زور به یک جا برسانند و هیچ چیزی مانع کار آنها نمیشود.نفر اول این گروه علیرضا رحمانی است و نفر دوم محمدصالح سعیدی و نفر سوم محمدآذری است که با هم این پروژه را سر هم بندی کرده اند.</string>
    <string name="nameString">لطفا نام مورد نظر را وارد کنید.</string>
    <string name="IDString">لطفا آیدی قرار مورد نظر را وارد کنید.</string>
    <string name="timeString">لطفا زمان مورد نظر را وارد کنید.</string>
    <string name="OPSString">OPS</string>
    <string name="textCost">هزینه کرد</string>
    <string name="textName">نام</string>
    <string name="createDateTitle">ساخت قرار</string>
    <string name="editTextPersonNameDate">نام</string>
    <string name="editTextNumberDate">مبلغ</string>
    <string name="editDateID">لطفا آیدی قرار را وارد کنید</string>
    <string name="edit">ویرایش</string>
    <string name="notComplete">فیلد ها کامل نیستند</string>
    <string name="editDate">آیدی قرار را وارد کنید</string>

</resources>