<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="2"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/textName"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/ir_sans"
                android:layout_weight="1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textCost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/textCost"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/ir_sans"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPersonNameDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/ir_sans"
                android:gravity="center"
                android:textColorHint="@color/purple_200_hint"
                android:inputType="textPersonName"
                android:hint="@string/editTextPersonNameDate"/>

            <EditText
                android:id="@+id/editTextNumberDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textColorHint="@color/purple_200_hint"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/ir_sans"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/editTextNumberDate"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>